[1.18.6] - Refactor tag duration report