@@ -1,7 +1,6 @@
 package com.igorgorbunov3333.timer.service.tag.report;
 
 import com.igorgorbunov3333.timer.model.dto.pomodoro.PomodoroDto;
-import com.igorgorbunov3333.timer.model.dto.tag.report.TagDurationReportDto;
 import com.igorgorbunov3333.timer.model.dto.tag.report.TagDurationReportRowDto;
 import lombok.AllArgsConstructor;
 import lombok.EqualsAndHashCode;
@@ -25,24 +24,24 @@ import java.util.stream.Collectors;
 
 @Component
 @AllArgsConstructor
+//TODO: refactor
 public class TagDurationReportsComposer {
 
     private static final String TOTAL_REPORT_ROW_NAME = "Total";
 
     private final AllTagsDurationReporter allTagsDurationReporter;
 
-    public List<TagDurationReportDto> compose(List<PomodoroDto> pomodoro) {
-        List<TagDurationReportDto> reports = allTagsDurationReporter.reportForEachTag(pomodoro);
+    public List<TagDurationReportRowDto> compose(List<PomodoroDto> pomodoro) {
+        List<TagDurationReportRowDto> reportRows = allTagsDurationReporter.reportForEachTag(pomodoro);
 
-        Map<String, TagDurationReportDto> tagsToReports = reports.stream()
-                .collect(Collectors.toMap(report ->
-                        report.getMainTagReportRow().getTag(), Function.identity()));
+        Map<String, TagDurationReportRowDto> tagsToReportRows = reportRows.stream()
+                .collect(Collectors.toMap(TagDurationReportRowDto::getTag, Function.identity()));
 
-        List<TagDurationReportDto> rootReports = getRootReports(reports, tagsToReports);
+        List<TagDurationReportRowDto> rootReportRows = getRootReportRows(reportRows, tagsToReportRows);
 
-        List<TagDurationReportDto> mergedReports = mergeReports(tagsToReports, rootReports);
+        List<TagDurationReportRowDto> mergedReportRows = mergeReportRows(tagsToReportRows, rootReportRows);
 
-        List<TagDurationReportRowDto> allRows = collectAllReportRows(mergedReports);
+        List<TagDurationReportRowDto> allRows = collectAllReportRows(mergedReportRows);
 
         Map<TagDurationReportRowDto, List<ParentWithChildrenContainer>> rowsToParentRows = new HashMap<>();
         for (TagDurationReportRowDto reportRow : allRows) {
@@ -52,108 +51,112 @@ public class TagDurationReportsComposer {
                 parentsWithChildren = new ArrayList<>();
             }
 
-            parentsWithChildren.add(new ParentWithChildrenContainer(reportRow.getParentRow(), reportRow.getSubRows()));
+            ParentWithChildrenContainer parentWithChildrenContainer =
+                    new ParentWithChildrenContainer(reportRow.getParentRow(), reportRow.getMappedRows());
+            parentsWithChildren.add(parentWithChildrenContainer);
 
             rowsToParentRows.put(reportRow, parentsWithChildren);
         }
 
-        for (TagDurationReportDto rootReport : mergedReports) {
-            rowsToParentRows.put(rootReport.getMainTagReportRow(), List.of(new ParentWithChildrenContainer(null, rootReport.getMappedTagsReportRows())));
+        for (TagDurationReportRowDto rootReport : mergedReportRows) {
+            ParentWithChildrenContainer parentWithChildrenContainer =
+                    new ParentWithChildrenContainer(null, rootReport.getMappedRows());
+            rowsToParentRows.put(rootReport, List.of(parentWithChildrenContainer));
         }
 
-        List<TagDurationReportDto> composedMergedReports = new ArrayList<>();
-        for (TagDurationReportDto mergedReport : mergedReports) {
-            List<TagDurationReportRowDto> fixedRows = clearDuplicatesAndFixRowsDuration(mergedReport.getMappedTagsReportRows(), rowsToParentRows);
-            composedMergedReports.add(new TagDurationReportDto(mergedReport.getMainTagReportRow(), fixedRows));
+        List<TagDurationReportRowDto> composedMergedReportsRows = new ArrayList<>();
+        for (TagDurationReportRowDto mergedReportRow : mergedReportRows) {
+            List<TagDurationReportRowDto> fixedRows =
+                    clearDuplicatesAndFixRowsDuration(mergedReportRow.getMappedRows(), rowsToParentRows);
+            mergedReportRow.setMappedRows(fixedRows);
+            composedMergedReportsRows.add(mergedReportRow);
         }
 
-        composedMergedReports.sort(Comparator.comparing(r -> r.getMainTagReportRow().getTag()));
+        composedMergedReportsRows.sort(Comparator.comparing(TagDurationReportRowDto::getTag));
 
-        TagDurationReportDto totalReport = buildTotalReport(composedMergedReports);
-        composedMergedReports.add(totalReport);
+        TagDurationReportRowDto totalReportRow = buildTotalReportRow(composedMergedReportsRows);
+        composedMergedReportsRows.add(totalReportRow);
 
-        return composedMergedReports;
+        return composedMergedReportsRows;
     }
 
-    private List<TagDurationReportDto> getRootReports(List<TagDurationReportDto> reports,
-                                                      Map<String, TagDurationReportDto> tagsToReports) {
-        List<TagDurationReportDto> rootReports = new LinkedList<>();
-        Map<Long, TagDurationReportDto> durationToReports = new HashMap<>();
-        for (TagDurationReportDto report : reports) {
-            if (isRootReport(report, tagsToReports)) {
-                long reportDuration = report.getMainTagReportRow().getDuration();
+    private List<TagDurationReportRowDto> getRootReportRows(List<TagDurationReportRowDto> reportRows,
+                                                            Map<String, TagDurationReportRowDto> tagsToReportRows) {
+        List<TagDurationReportRowDto> rootRows = new LinkedList<>();
+        Map<Long, TagDurationReportRowDto> durationToReportRows = new HashMap<>();
+        for (TagDurationReportRowDto row : reportRows) {
+            if (isRootReportRow(row, tagsToReportRows)) {
+                long reportDuration = row.getDuration();
 
-                if (durationToReports.containsKey(reportDuration)) {
-                    TagDurationReportDto reportWithSameDuration = durationToReports.get(reportDuration);
+                if (durationToReportRows.containsKey(reportDuration)) {
+                    TagDurationReportRowDto reportWithSameDuration = durationToReportRows.get(reportDuration);
 
-                    rootReports.remove(reportWithSameDuration);
+                    rootRows.remove(reportWithSameDuration);
 
-                    TagDurationReportRowDto reportWithSameDurationMainRow = reportWithSameDuration.getMainTagReportRow();
-                    reportWithSameDurationMainRow.setTag(reportWithSameDurationMainRow.getTag() + " #" + report.getMainTagReportRow().getTag());
-                    reportWithSameDuration = new TagDurationReportDto(reportWithSameDurationMainRow, reportWithSameDuration.getMappedTagsReportRows());
+                    reportWithSameDuration.setTag(reportWithSameDuration.getTag() + " #" + row.getTag());
 
-                    rootReports.add(reportWithSameDuration);
+                    rootRows.add(reportWithSameDuration);
                 } else {
-                    rootReports.add(report);
-                    durationToReports.put(reportDuration, report);
+                    rootRows.add(row);
+                    durationToReportRows.put(reportDuration, row);
                 }
             }
         }
 
-        return rootReports;
+        return rootRows;
     }
 
-    private boolean isRootReport(TagDurationReportDto report, Map<String, TagDurationReportDto> tagsToReports) {
-        return report.getMappedTagsReportRows().stream()
-                .allMatch(row -> isRootRow(report, tagsToReports, row));
+    private boolean isRootReportRow(TagDurationReportRowDto reportRow,
+                                    Map<String, TagDurationReportRowDto> tagsToReportRows) {
+        return reportRow.getMappedRows().stream()
+                .allMatch(row -> isRootReportRow(reportRow, tagsToReportRows, row));
     }
 
-    private boolean isRootRow(TagDurationReportDto report,
-                              Map<String, TagDurationReportDto> tagsToReports,
-                              TagDurationReportRowDto reportRow) {
-        return mapToTagNames(reportRow).stream()
-                .map(tagName -> tagsToReports.get(tagName).getMainTagReportRow())
-                .allMatch(row -> row.getDuration() <= report.getMainTagReportRow().getDuration());
+    private boolean isRootReportRow(TagDurationReportRowDto reportRow,
+                                    Map<String, TagDurationReportRowDto> tagsToReportRows,
+                                    TagDurationReportRowDto mappedRow) {
+        return mapToTagNames(mappedRow).stream()
+                .map(tagsToReportRows::get)
+                .allMatch(row -> row.getDuration() <= reportRow.getDuration());
     }
 
-    private List<TagDurationReportDto> mergeReports(Map<String, TagDurationReportDto> tagsToReports,
-                                                    List<TagDurationReportDto> reports) {
-        List<TagDurationReportDto> mergedReports = new ArrayList<>();
-        for (TagDurationReportDto rootReport : reports) {
-            TagDurationReportRowDto mainRow = rootReport.getMainTagReportRow();
+    private List<TagDurationReportRowDto> mergeReportRows(Map<String, TagDurationReportRowDto> tagsToReportRows,
+                                                          List<TagDurationReportRowDto> reportRows) {
+        List<TagDurationReportRowDto> mergedReportRows = new ArrayList<>();
+        for (TagDurationReportRowDto rootReportRow : reportRows) {
             List<TagDurationReportRowDto> mappedRows =
-                    mapSubRows(rootReport.getMainTagReportRow(), rootReport.getMappedTagsReportRows(), tagsToReports, new HashMap<>());
-            TagDurationReportDto mergedReport = new TagDurationReportDto(mainRow, mappedRows);
-            mergedReports.add(mergedReport);
+                    mapSubRows(rootReportRow, rootReportRow.getMappedRows(), tagsToReportRows, new HashMap<>());
+            rootReportRow.setMappedRows(mappedRows);
+            mergedReportRows.add(rootReportRow);
         }
 
-        return mergedReports;
+        return mergedReportRows;
     }
 
-    public List<TagDurationReportRowDto> mapSubRows(TagDurationReportRowDto mainRow,
-                                                    List<TagDurationReportRowDto> mappedRows,
-                                                    Map<String, TagDurationReportDto> tagsToReports,
+    public List<TagDurationReportRowDto> mapSubRows(TagDurationReportRowDto mainReportRow,
+                                                    List<TagDurationReportRowDto> mappedReportRows,
+                                                    Map<String, TagDurationReportRowDto> tagsToReportRows,
                                                     Map<String, ProcessedTagsContainer> processedTags) {
         List<TagDurationReportRowDto> subRows = new ArrayList<>();
 
-        if (CollectionUtils.isEmpty(mappedRows)) {
+        if (CollectionUtils.isEmpty(mappedReportRows)) {
             return List.of();
         }
 
-        for (TagDurationReportRowDto row : mappedRows) {
+        for (TagDurationReportRowDto row : mappedReportRows) {
             Set<String> tagNames = mapToTagNames(row);
 
-            Queue<TagDurationReportRowDto> rows = getRowsByNames(tagsToReports, tagNames);
+            Queue<TagDurationReportRowDto> rows = getRowsByNames(tagsToReportRows, tagNames);
 
             List<TagDurationReportRowDto> currentRowSubRows = new LinkedList<>();
             for (TagDurationReportRowDto currentRow : rows) {
-                if (isAlreadyProcessed(currentRow, processedTags, tagsToReports)) {
+                if (isAlreadyProcessed(currentRow, processedTags, tagsToReportRows)) {
                     continue;
                 }
 
                 String currentRowTagName = currentRow.getTag();
 
-                if (currentRow.getDuration() < mainRow.getDuration()) {
+                if (currentRow.getDuration() < mainReportRow.getDuration()) {
                     if (!currentRowSubRows.isEmpty()) {
                         TagDurationReportRowDto previousRow = currentRowSubRows.get(currentRowSubRows.size() - 1);
 
@@ -163,16 +166,16 @@ public class TagDurationReportsComposer {
                         }
                     }
 
-                    long duration = calculateDuration(currentRow, mainRow, tagsToReports);
+                    long duration = calculateDuration(currentRow, mainReportRow, tagsToReportRows);
 
-                    currentRow = new TagDurationReportRowDto(currentRowTagName, duration, currentRow.getSubRows(), mainRow);
+                    currentRow = new TagDurationReportRowDto(currentRowTagName, duration, currentRow.getMappedRows(), mainReportRow);
                     currentRowSubRows.add(currentRow);
 
-                    List<TagDurationReportRowDto> currentTagNameMappedReportRows = tagsToReports.get(currentRowTagName)
-                            .getMappedTagsReportRows();
+                    List<TagDurationReportRowDto> currentTagNameMappedReportRows = tagsToReportRows.get(currentRowTagName)
+                            .getMappedRows();
                     List<TagDurationReportRowDto> currentRowSubRowsSubRows =
-                            mapSubRows(currentRow, currentTagNameMappedReportRows, tagsToReports, processedTags);
-                    currentRow.setSubRows(currentRowSubRowsSubRows);
+                            mapSubRows(currentRow, currentTagNameMappedReportRows, tagsToReportRows, processedTags);
+                    currentRow.setMappedRows(currentRowSubRowsSubRows);
                     processedTags.put(currentRowTagName, new ProcessedTagsContainer(currentRowTagName, duration));
                 }
             }
@@ -182,17 +185,18 @@ public class TagDurationReportsComposer {
         return subRows;
     }
 
-    private LinkedList<TagDurationReportRowDto> getRowsByNames(Map<String, TagDurationReportDto> tagsToRows, Set<String> tagNames) {
+    private LinkedList<TagDurationReportRowDto> getRowsByNames(Map<String, TagDurationReportRowDto> tagsToRows,
+                                                               Set<String> tagNames) {
         return tagNames.stream()
-                .map(tagName -> tagsToRows.get(tagName).getMainTagReportRow())
+                .map(tagsToRows::get)
                 .sorted(Comparator.comparing(TagDurationReportRowDto::getDuration).reversed())
                 .collect(Collectors.toCollection(LinkedList::new));
     }
 
     private long calculateDuration(TagDurationReportRowDto currentRow,
                                    TagDurationReportRowDto mainRow,
-                                   Map<String, TagDurationReportDto> tagsToRows) {
-        List<TagDurationReportRowDto> mappedRows = tagsToRows.get(currentRow.getTag()).getMappedTagsReportRows();
+                                   Map<String, TagDurationReportRowDto> tagsToRows) {
+        List<TagDurationReportRowDto> mappedRows = tagsToRows.get(currentRow.getTag()).getMappedRows();
 
         long duration = 0L;
 
@@ -218,20 +222,19 @@ public class TagDurationReportsComposer {
 
     private boolean isAlreadyProcessed(TagDurationReportRowDto targetRow,
                                        Map<String, ProcessedTagsContainer> processedTags,
-                                       Map<String, TagDurationReportDto> tagsToReports) {
+                                       Map<String, TagDurationReportRowDto> tagsToReportRows) {
         ProcessedTagsContainer processedTagsContainer = processedTags.get(targetRow.getTag());
 
-        long targetRowDuration = getTargetRowDuration(targetRow.getTag(), tagsToReports);
+        long targetRowDuration = getTargetRowDuration(targetRow.getTag(), tagsToReportRows);
 
         return processedTagsContainer != null
                 && processedTagsContainer.getDuration() == targetRowDuration;
     }
 
-    private long getTargetRowDuration(String targetTagName, Map<String, TagDurationReportDto> tagsToReports) {
+    private long getTargetRowDuration(String targetTagName, Map<String, TagDurationReportRowDto> tagsToReportRows) {
         String[] tags = targetTagName.split(" #");
 
-        return tagsToReports.get(tags[0])
-                .getMainTagReportRow()
+        return tagsToReportRows.get(tags[0])
                 .getDuration();
     }
 
@@ -241,9 +244,9 @@ public class TagDurationReportsComposer {
                 .collect(Collectors.toSet());
     }
 
-    private List<TagDurationReportRowDto> collectAllReportRows(List<TagDurationReportDto> reports) {
-        List<TagDurationReportRowDto> firstLevelRows = reports.stream()
-                .flatMap(report -> report.getMappedTagsReportRows().stream())
+    private List<TagDurationReportRowDto> collectAllReportRows(List<TagDurationReportRowDto> reportsRows) {
+        List<TagDurationReportRowDto> firstLevelRows = reportsRows.stream()
+                .flatMap(report -> report.getMappedRows().stream())
                 .collect(Collectors.toList());
 
         List<TagDurationReportRowDto> allRows = firstLevelRows.stream()
@@ -259,8 +262,8 @@ public class TagDurationReportsComposer {
     private List<TagDurationReportRowDto> collectAllRows(TagDurationReportRowDto parentRow) {
         List<TagDurationReportRowDto> allRows = new ArrayList<>();
 
-        if (!CollectionUtils.isEmpty(parentRow.getSubRows())) {
-            for (TagDurationReportRowDto child : parentRow.getSubRows()) {
+        if (!CollectionUtils.isEmpty(parentRow.getMappedRows())) {
+            for (TagDurationReportRowDto child : parentRow.getMappedRows()) {
                 allRows.add(child);
                 allRows.addAll(collectAllRows(child));
             }
@@ -277,14 +280,14 @@ public class TagDurationReportsComposer {
 
             String rowTagName = row.getTag();
 
-            if (!CollectionUtils.isEmpty(row.getSubRows())) {
-                List<TagDurationReportRowDto> fixedChildRows = clearDuplicatesAndFixRowsDuration(row.getSubRows(), rowToParentRows);
+            if (!CollectionUtils.isEmpty(row.getMappedRows())) {
+                List<TagDurationReportRowDto> fixedChildRows = clearDuplicatesAndFixRowsDuration(row.getMappedRows(), rowToParentRows);
                 fixedRow = new TagDurationReportRowDto(rowTagName, row.getDuration(), fixedChildRows, row.getParentRow());
             }
 
             List<ParentWithChildrenContainer> parentWithChildrenContainers = rowToParentRows.get(row);
             if (!CollectionUtils.isEmpty(parentWithChildrenContainers) && parentWithChildrenContainers.size() > 1) {
-                if (CollectionUtils.isEmpty(row.getSubRows())
+                if (CollectionUtils.isEmpty(row.getMappedRows())
                         && isCurrentRowWithSameParentAsOthersAndCurrentWithoutChildren(row, parentWithChildrenContainers)) {
                     continue;
                 }
@@ -323,7 +326,7 @@ public class TagDurationReportsComposer {
         long containersWithSameParentAmount = containers.stream()
                 .filter(container -> container.getParent().equals(row.getParentRow()))
                 .count();
-        return containersWithSameParentAmount > 1L && CollectionUtils.isEmpty(row.getSubRows());
+        return containersWithSameParentAmount > 1L && CollectionUtils.isEmpty(row.getMappedRows());
     }
 
     private boolean isMoreSeniorParentAndLongerDuration(TagDurationReportRowDto row,
@@ -363,7 +366,7 @@ public class TagDurationReportsComposer {
                 if (row.getTag().equals(tagName)) {
                     pairs.add(Pair.of(row, nestingLevel));
                 }
-                findRowsWithSameTagWithNestingLevels(tagName, row.getSubRows(), nestingLevel + 1, pairs);
+                findRowsWithSameTagWithNestingLevels(tagName, row.getMappedRows(), nestingLevel + 1, pairs);
             }
         }
     }
@@ -378,16 +381,13 @@ public class TagDurationReportsComposer {
         return count;
     }
 
-    private TagDurationReportDto buildTotalReport(List<TagDurationReportDto> reports) {
+    private TagDurationReportRowDto buildTotalReportRow(List<TagDurationReportRowDto> reportRows) {
         long duration = 0;
-        for (TagDurationReportDto report : reports) {
-            duration += report.getMainTagReportRow().getDuration();
+        for (TagDurationReportRowDto report : reportRows) {
+            duration += report.getDuration();
         }
 
-        TagDurationReportRowDto totalReportRow =
-                new TagDurationReportRowDto(TOTAL_REPORT_ROW_NAME, duration, Collections.emptyList(), null);
-
-        return new TagDurationReportDto(totalReportRow, List.of());
+        return new TagDurationReportRowDto(TOTAL_REPORT_ROW_NAME, duration, Collections.emptyList(), null);
     }
 
     @Getter
